fixed project.json plop, deleted create sass file in plopfile.js, fixed typesTemplate.ts.hbs, fixed tsconfig.json warnings, added game/index.tsx

--- a/apps/thebeginning/__plop-templates__/components/typesTemplate.ts.hbs
+++ b/apps/thebeginning/__plop-templates__/components/typesTemplate.ts.hbs
@@ -1,4 +1,4 @@
 import React from 'react';
-export type {{name}}Props = {};
+export type {{name}}Props = Record<string, unknown>;
 
 export type {{name}}Types = (props: {{name}}Types) => React.ReactElement;
